feat: actualizar release build y mejoras de emulador, sintaxis y busqueda